# ChangeLog for perl-core/Module-Build
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Build/ChangeLog,v 1.8 2009/03/13 21:17:59 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org>
  -Module-Build-0.28-r1.ebuild, -Module-Build-0.30.ebuild,
  -Module-Build-0.31.ebuild, -Module-Build-0.31.012.ebuild:
  Cleanup

*Module-Build-0.32 (26 Feb 2009)

  26 Feb 2009; Torsten Veller <tove@gentoo.org> +Module-Build-0.32.ebuild:
  Version bump

*Module-Build-0.31.012 (14 Jan 2009)

  14 Jan 2009; Torsten Veller <tove@gentoo.org>
  -Module-Build-0.31.011.ebuild, +Module-Build-0.31.012.ebuild:
  Version bump. Cleanup

*Module-Build-0.31.011 (13 Jan 2009)

  13 Jan 2009; Torsten Veller <tove@gentoo.org>
  +Module-Build-0.31.011.ebuild, -Module-Build-0.31011.ebuild:
  Rename version: 0.31011 -> 0.31.011

*Module-Build-0.31011 (13 Jan 2009)

  13 Jan 2009; Robin H. Johnson <robbat2@gentoo.org>
  +Module-Build-0.31011.ebuild:
  Version bump via perl-bump experimental tool.

*Module-Build-0.31 (23 Dec 2008)

  23 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
  +Module-Build-0.31.ebuild:
  Version bump.

  04 Nov 2008; Mike Frysinger <vapier@gentoo.org>
  Module-Build-0.28.08.ebuild, Module-Build-0.30.ebuild:
  Add arm/s390/sh love.

*Module-Build-0.30 (01 Nov 2008)
*Module-Build-0.28.08 (01 Nov 2008)
*Module-Build-0.28-r1 (01 Nov 2008)

  01 Nov 2008; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +Module-Build-0.28-r1.ebuild, +Module-Build-0.28.08.ebuild,
  +Module-Build-0.30.ebuild:
  dev-perl => perl-core migration

  01 Nov 2008; Torsten Veller <tove@gentoo.org> module-build-0.28-r1.ebuild,
  module-build-0.28.08.ebuild, module-build-0.30.ebuild:
  New virtuals: Archive-Tar ExtUtils-CBuilder extutils-parsexs

*module-build-0.30 (05 Oct 2008)

  05 Oct 2008; Torsten Veller <tove@gentoo.org> +module-build-0.30.ebuild:
  Version bump
