@@ -1,10 +1,6 @@
-DIST Module-Build-0.30.tar.gz 195650 RMD160 f3543567fe587b92311681c7cb2906625f59e045 SHA1 e75372cfe0cfad0b1897ea1f6606961a8f09bc1b SHA256 31b8f923993cfc0f3e95e0376ee4af3fbdf737d258f7d377aa14c9fee1e3f65b
-DIST Module-Build-0.31.tar.gz 207913 RMD160 7183e027a799f1d91dc294b146f92153adf13d02 SHA1 8bfb8585c78f1afd3fbbe0f32cdf70ac0c1df624 SHA256 e2f723be8d6c70b4ddbca3b5e32e52e6e98eae8f43e34d7ede87efcb1796bbb5
-DIST Module-Build-0.31012.tar.gz 205507 RMD160 d4eb2c802666b04947ad577a70094008857e53c0 SHA1 b3ecd98de96413a0795e0aeecffac58995d7cf7c SHA256 396f8c4b87ae3e0c6a3d73563370791674df107911ac62be4e41fa5caa2ef2c4
 DIST Module-Build-0.32.tar.gz 207293 RMD160 72e4dd9bf4a136f21c18d3ac9209d4f13038a8b4 SHA1 b489a1dc5547f14166d0cf4c8f974a3e152aa76c SHA256 5ccf734b79ef90289b40b1af3507facdc35c11fcb111f0c90f9dc17350427d02
-EBUILD Module-Build-0.30.ebuild 986 RMD160 57f7005fb3cc8950c031b85fc2371edea735c86a SHA1 5bdb314baf5d455c68e317e9c6453c9887accd27 SHA256 0268210fe707486ee5baa0aa0b13e83eb2510bac087843c2e31808f6af82b7c1
-EBUILD Module-Build-0.31.012.ebuild 958 RMD160 90513278e419e5245f0ab302d0c9372e0406a6ed SHA1 43a0f75197c4f84764762f27fecb6df0a954e0b1 SHA256 313990ef5e68bbba38e9fc6c8b1112bfbec9c07d123e26231015a6979656efc7
-EBUILD Module-Build-0.31.ebuild 998 RMD160 99fb3e897126a3819318f0c8f1f12ec74d434a1a SHA1 b05f547a317dc37639f5413ba07eb4646d0b74b9 SHA256 74b425bc509b1f1ff6f7335ebe5b001b6729698a63e20fe42aca5ea229da6bac
+DIST Module-Build-0.33.tar.gz 251488 RMD160 6fd5f689cfb97001f1ab6b9d9e544aa41908df90 SHA1 0afdef419fe45757e6137a265a7072bbe93c2e5b SHA256 f84a0c778f94dccf3eb157c44ad03d5ff6be043cb8f44cd58ede303b223401be
 EBUILD Module-Build-0.32.ebuild 988 RMD160 bf5c34716a3d4fdb71b8660460df96edb89d955c SHA1 79566655df0dca024359da0e0b4081fe2de76869 SHA256 a5a78e9d8b0b4a5d4d5e6bd68c5135ed250558337bee6e154624dae92adced86
-MISC ChangeLog 11456 RMD160 247b3cf09b7470086ef7d881b5a9d35666fdff66 SHA1 0724f4a0a5446cc5b264a1caa9b503086c1a575a SHA256 0149e4ebfe47eba711c289b3eede604f4744476dd57dd4fe99e8201e09cf0b3f
+EBUILD Module-Build-0.33.ebuild 988 RMD160 91b2a6d3f01226ac0a546843b42e3d399e616a16 SHA1 a4a9f84cc6975c3f7df91bf993d238c76056b2b0 SHA256 378e26c2a02b5adab5d70e69ef5958a899344bdb914f1c347522f2946e754998
+MISC ChangeLog 11581 RMD160 715b70148c94d17f6d04122e282f311ba2798221 SHA1 f2a6f46405f22a092e194cf423e8ac0ff833ffd5 SHA256 b0e795cac3e83ad604b81e445371c8bd8df2a07e8c933ad7ea7a692e071a1714
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
